<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="btn_launch_elections">Upcoming Elections</string>
    <string name="btn_launch_find_my">Find my Representetives</string>
    <string name="upcoming_elections_text">Upcoming Elections</string>
    <string name="saved_elections_text">Saved Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="button_label_unfollow_election">Unfollow Election</string>
    <string name="button_label_follow_election">Follow Election</string>


    <string name="button_label_find_rep">Find My Representatives</string>
    <string name="button_label_upcoming_elections">Upcoming Elections</string>
    <string name="header_label_upcoming_elections">Upcoming Elections</string>
    <string name="header_label_saved_elections">Saved Elections</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use "Use My Location" feature.</string>
    <string name="settings">Settings</string>
    <string name="header_label_representative_search">Representative Search</string>
    <string name="header_label_my_representatives">My Representatives</string>
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip</string>
    <string name="button_label_use_my_location">Use my location</string>
    <string name="user_instructions">Use address form to Find Representatives. Click on \"USE MY LOCATION\" to fill in address form automatically and search for representatives (Location permission will require)</string>
    <string name="loading_failure_snack">Failure fetching data</string>
    <string name="content_description_launch_frag_img">Voting image</string>
    <string name="no_data_saved">There is no saved data</string>
    <string name="header_label_election_info">Election Information</string>
    <string name="header_label_correspondence_address">Correspondence Address</string>
    <string name="link_label_voting_locations">Voting Locations</string>
    <string name="link_label_ballot_information">Ballot Information</string>
    <string name="no_network_snack_msg">No network connection</string>

</resources>
