<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representative_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/motion_scene"
        tools:context="com.example.android.politicalpreparedness.representative.RepresentativeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/address_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/search_title"
                style="@style/HeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/header_label_representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                style="@style/AddressFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_line_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title"
                app:text="@{viewModel.locationAddress.line1}" />

            <EditText
                android:id="@+id/address_line_2"
                style="@style/AddressFormStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_address_line_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1"
                app:text="@{viewModel.locationAddress.line2}" />

            <EditText
                android:id="@+id/city"
                style="@style/AddressFormStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2"
                app:text="@{viewModel.locationAddress.city}" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city"
                app:stateValue="@{viewModel.locationAddress.state}" />

            <EditText
                android:id="@+id/zip"
                style="@style/AddressFormStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_zip"
                android:inputType="number"
                android:maxLength="5"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city"
                app:text="@{viewModel.locationAddress.zip}" />

            <Button
                android:id="@+id/button_search"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/button_label_find_rep"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/button_label_use_my_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/representative_title"
            style="@style/HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/header_label_my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_form" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:recyclerViewVisibilityState="@{viewModel.currentSearchState}"
            tools:listitem="@layout/view_holder_representative" />

        <TextView
            android:id="@+id/userInstructions"
            style="@style/InfoTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_instructions"
            app:textViewVisibilityState="@{viewModel.currentSearchState}"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/progress"
            android:layout_width="@dimen/progress_iv_dimen"
            android:layout_height="@dimen/progress_iv_dimen"
            app:progressVisibilityState="@{viewModel.currentSearchState}"
            app:srcCompat="@drawable/loading_animation" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>